--- a/android/apollo/res/values-ar/strings.xml
+++ b/android/apollo/res/values-ar/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> مثبت على الشاشة الرئيسية</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> لا يمكن أن تكون معلقة للشاشة الرئيسية</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' تعيين كنغمة رنين</string>
-    <string name="now_listening_to">#تشغيل جديد <xliff:g id="title">%1$s</xliff:g> بي <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#تشغيل جديد <xliff:g id="title">%1$s</xliff:g> بي <xliff:g id="artist">%2$s</xliff:g> #SnapLoad</string>
   <string name="share_track_using">مشاركة المسار ااستخدام:</string>
     <string name="no_effects_for_you">المساوي لم يستطع الفتح.</string>
   <string name="empty_music">لنسخ ملفات الموسيقى من الكمبيوتر إلى الجهاز الخاص بك، استخدم كبل USB.</string>
   <string name="empty_last_added">هنا ستظهر الأغاني التي قمت بإضافتها خلال الشهر الماضي.</string>
   <string name="empty_search">لم يتم العثور على نتائج البحث</string>
     <string name="empty_recent">ألبوم قمت بلإستماع عليه  سوف تظهر هنا. حاول تشغيل بعض الموسيقى.</string>
-  <string name="now_listening_to_no_artist_available">الان نلعب او نعرض \"<xliff:g id="title">%1$s</xliff:g>\" على #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">الان نلعب او نعرض \"<xliff:g id="title">%1$s</xliff:g>\" على #SnapLoad</string>
   <string name="delete_files_title">حذف الملفات</string>
   <string name="page_last_added">آخر يضاف</string>
   <string name="empty_playlist">قائمة التشغيل هذه فارغة.\n\nانقر هنا لمعرفة كيفية إضافة الأغاني.</string>
   <string name="are_you_sure_delete_files_text">هل أنت متأكد أنك تريد دائمًا حذف الملفات المحددة من جهازك؟</string>
-  <string name="frostwire_player">FrostWire مشغل الوسائطr</string>
+  <string name="frostwire_player">SnapLoad مشغل الوسائطr</string>
 </resources>
