--- a/android/apollo/res/values-cs/strings.xml
+++ b/android/apollo/res/values-cs/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen">\u201a<xliff:g id="name">%s</xliff:g>\u2018 přidána na plochu</string>
   <string name="could_not_be_pinned_to_home_screen">\u201a<xliff:g id="name">%s</xliff:g>\u2018 nelze přidat na plochu</string>
   <string name="set_as_ringtone">\u201a<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\u2018 nastaven jako vyzvánění</string>
-    <string name="now_listening_to">#Přehrávání \u201a<xliff:g id="title">%1$s</xliff:g>\u2018 / \u201a<xliff:g id="artist">%2$s</xliff:g>\u2018 #FrostWire</string>
+    <string name="now_listening_to">#Přehrávání \u201a<xliff:g id="title">%1$s</xliff:g>\u2018 / \u201a<xliff:g id="artist">%2$s</xliff:g>\u2018 #SnapLoad</string>
   <string name="share_track_using">Sdílet skladbu pomocí:</string>
     <string name="no_effects_for_you">Nelze otevřít ekvalizér.</string>
   <string name="empty_music">Pro zkopírování hudebních souborů z počítače do zařízení použijte USB kabel.</string>
   <string name="empty_last_added">Zde budou zobrazeny všechny skladby přidané za poslední měsíc.</string>
   <string name="empty_search">Nenalezeny žádné výsledky</string>
     <string name="empty_recent">Zde budou zobrazena všechna alba, která byla poslouchána. Pusťte si nějakou hudbu.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" na #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" na #SnapLoad</string>
   <string name="delete_files_title">Vymazat soubory</string>
   <string name="page_last_added">Poslední přidané</string>
   <string name="empty_playlist">Tento seznam skladeb je prázdný.\n\nKlepnutím sem se dozvíte, jak přidat skladby.</string>
   <string name="are_you_sure_delete_files_text">Opravdu chcete soubory ze zařízení trvale smazat?</string>
-  <string name="frostwire_player">Přehrávač médií FrostWire</string>
+  <string name="frostwire_player">Přehrávač médií SnapLoad</string>
 </resources>
