--- a/android/apollo/res/values-pt-rBR/strings.xml
+++ b/android/apollo/res/values-pt-rBR/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> foi colocada na sua tela inicial</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> não pode ser colocada na sua tela inicial</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' foi definido como toque de celular</string>
-    <string name="now_listening_to">#TocandoAgora <xliff:g id="title">%1$s</xliff:g> por <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#TocandoAgora <xliff:g id="title">%1$s</xliff:g> por <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">Compartilhar faixa usando:</string>
     <string name="no_effects_for_you">O equalizador não pôde ser aberto.</string>
   <string name="empty_music">Para copiar a música de seu computador para seu dispositivo, use um cabo USB.</string>
   <string name="empty_last_added">Serão exibidas aqui as músicas que você adicionou no último mês.</string>
   <string name="empty_search">Nenhum resultado de busca</string>
     <string name="empty_recent">Serão exibidos aqui os álbuns que você escutou. Tente tocar alguma música.</string>
-  <string name="now_listening_to_no_artist_available">#Tocando \"<xliff:g id="title">%1$s</xliff:g>\" em #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#Tocando \"<xliff:g id="title">%1$s</xliff:g>\" em #SnapLoad </string>
   <string name="delete_files_title">Deletar arquivos</string>
   <string name="page_last_added">Último adicionado</string>
   <string name="empty_playlist">Esta lista de reprodução está vazia.\n\nClique aqui para aprender como adicionar canções.</string>
   <string name="are_you_sure_delete_files_text">Tem certeza de que deseja APAGAR PERMANENTEMENTE os arquivos selecionados do seu dispositivo?</string>
-  <string name="frostwire_player">Reprodutor de FrostWire</string>
+  <string name="frostwire_player">Reprodutor de SnapLoad</string>
 </resources>
