--- a/android/apollo/res/values-si/strings.xml
+++ b/android/apollo/res/values-si/strings.xml
@@ -81,7 +81,7 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> ඔබගේ මුල් තිරයට ගසා අමුණා ඇත</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> ඔබගේ මුල් තිරයට ගසා ඇමිණීමට නොහැක</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' රින්ග්ටෝනය ලෙස සකසන්න</string>
-    <string name="now_listening_to">#<xliff:g id="artist">%2$s</xliff:g> විසින් <xliff:g id="title">%1$s</xliff:g> දැන් ධාවනයවේ #FrostWire</string>
+    <string name="now_listening_to">#<xliff:g id="artist">%2$s</xliff:g> විසින් <xliff:g id="title">%1$s</xliff:g> දැන් ධාවනයවේ #SnapLoad </string>
   <string name="share_track_using">ඛණ්ඩ භාවිතය බෙදාගැනීම:</string>
     <string name="no_effects_for_you">සමකරකය විවෘත කල නොහැක.</string>
   <string name="empty_music">ඔබගේ පරිගණකයේ සිට ඔබගේ උපාංගයට සිංදු පිටපත් කිරීමට USB කේබලයක් භාවිතාකරන්න.</string>
