--- a/android/apollo/res/values-da/strings.xml
+++ b/android/apollo/res/values-da/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> fastgjort til din startskærm</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> kunne ikke fastgøres til din startskærm</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' sat som ringetone</string>
-    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> af <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> af <xliff:g id="artist">%2$s</xliff:g> #SnapLoad</string>
   <string name="share_track_using">Del sang vha.:</string>
     <string name="no_effects_for_you">Equalizeren kunne ikke åbnes.</string>
   <string name="empty_music">Brug et USB-kabel for at kopiere musik fra din computer til enheden.</string>
   <string name="empty_last_added">Sange, som du har tilføjet i løbet af den sidste måned, vil blive vist her.</string>
   <string name="empty_search">Ingen søgeresultater fundet</string>
     <string name="empty_recent">Albums, som du har lyttet til, vil blive vist her. Prøv at spille noget musik.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" på #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" på #SnapLoad</string>
   <string name="delete_files_title">Slet filer</string>
   <string name="page_last_added">Sidst tilføjet</string>
   <string name="empty_playlist">Denne afspilningsliste er tom.\n\nKlik her for at lære at tilføje sange.</string>
   <string name="are_you_sure_delete_files_text">Er du sikker på, at du vil slette de valgte filer permanent fra din enhed?</string>
-  <string name="frostwire_player">FrostWire Medieafspiller</string>
+  <string name="frostwire_player">SnapLoad Medieafspiller</string>
 </resources>
