--- a/android/apollo/res/values-el/strings.xml
+++ b/android/apollo/res/values-el/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> καρφιτσώθηκε στην αρχική οθόνη σας</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> δεν μπορεί να καρφιτσωθεί στην αρχική οθόνη σας</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' ορίστηκε ως ήχος κλήσης</string>
-    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #SnapLoad</string>
   <string name="share_track_using">Κοινή χρήση κομματιού με τη χρήση:</string>
     <string name="no_effects_for_you">Δεν ήταν δυνατό το άνοιγμα του ισοσταθμιστή.</string>
   <string name="empty_music">Για να αντιγράψετε μουσική από τον υπολογιστή στη συσκευή σας, χρησιμοποιήστε ένα καλώδιο USB.</string>
   <string name="empty_last_added">Τραγούδια που έχετε προσθέσει τον τελευταίο μήνα θα εμφανιστούν εδώ.</string>
   <string name="empty_search">Δεν βρέθηκαν αποτελέσματα αναζήτησης</string>
     <string name="empty_recent">Άλμπουμ που έχετε ακούσει θα εμφανιστούν εδώ. Δοκιμάστε να παίξετε κάποια μουσική.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" στο #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" στο #SnapLoad</string>
   <string name="delete_files_title">Διαγραφή αρχείων</string>
   <string name="page_last_added">Τελευταία προσθήκη</string>
   <string name="empty_playlist">Αυτή η λίστα αναπαραγωγής είναι κενή.\n\nΚάντε κλικ εδώ για να μάθετε πώς μπορείτε να προσθέσετε τραγούδια.</string>
   <string name="are_you_sure_delete_files_text">Είστε βέβαιοι ότι θέλετε να διαγράψετε οριστικά τα επιλεγμένα αρχεία από τη συσκευή σας;</string>
-  <string name="frostwire_player">FrostWire αναπαραγωγής πολυμέσων</string>
+  <string name="frostwire_player">SnapLoad αναπαραγωγής πολυμέσων</string>
 </resources>
