--- a/android/apollo/res/values-hr/strings.xml
+++ b/android/apollo/res/values-hr/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> pribodeno na vaš home screen</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> ne može biti pribodeno na vaš home screen</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' postavi kao melodiju zvona</string>
-    <string name="now_listening_to">#Izvođenje <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#Izvođenje <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #SnapLoad</string>
   <string name="share_track_using">Dijeli pjesmu preko:</string>
     <string name="no_effects_for_you">Ekvalizer se ne može otvoriti.</string>
   <string name="empty_music">Za kopiranje glazbe s računala na uređaj, koristite USB kabel.</string>
   <string name="empty_last_added">Pjesme koje ste dodali u posljednjih mjesec dana biti će prikazane ovdje.</string>
   <string name="empty_search">Nema rezultata pretraživanja</string>
     <string name="empty_recent">Albumi koje ste slušali će se pojaviti ovdje. Pokušajte svirati neku glazbu.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" na #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" na #SnapLoad</string>
   <string name="delete_files_title">Obriši datoteke</string>
   <string name="page_last_added">Zadnje dodano</string>
   <string name="empty_playlist">Popis za reprodukciju je prazan.\n\nKliknite ovdje da biste saznali kako dodati pjesme.</string>
   <string name="are_you_sure_delete_files_text">Jeste li sigurni da želite trajno izbrisati odabrane datoteke s uređaja?</string>
-  <string name="frostwire_player">FrostWire igrač mediji</string>
+  <string name="frostwire_player">SnapLoad igrač mediji</string>
 </resources>
