--- a/android/apollo/res/values-hu/strings.xml
+++ b/android/apollo/res/values-hu/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> felvéve a kezdőképernyőre</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> nem lett felvéve a kezdőképernyőre</string>
   <string name="set_as_ringtone">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" beállítva csengőhangként</string>
-    <string name="now_listening_to">#MostHallgatom <xliff:g id="title">%1$s</xliff:g> ettől: <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#MostHallgatom <xliff:g id="title">%1$s</xliff:g> ettől: <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">Szám megosztása:</string>
     <string name="no_effects_for_you">Nem sikerült megnyitni a hangszínszabályzót.</string>
   <string name="empty_music">Számítógépről történő zene másoláshoz használjon USB kábelt.</string>
   <string name="empty_last_added">Itt az utolsó hónapban hozzáadott zenéi fognak megjelenni.</string>
   <string name="empty_search">Nincs találat</string>
     <string name="empty_recent">Itt a legutóbb hallgatott albumok fognak megjelenni.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" a #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" a #SnapLoad </string>
   <string name="delete_files_title">Fájlok törlése</string>
   <string name="page_last_added">Utoljára hozzáadva</string>
   <string name="empty_playlist">Ez a lejátszási lista üres.\n\nKattintson ide a dalok hozzáadásához.</string>
   <string name="are_you_sure_delete_files_text">Biztosan törölni szeretné a kijelölt fájlokat a készülékről?</string>
-  <string name="frostwire_player">FrostWire médialejátszó</string>
+  <string name="frostwire_player">SnapLoad médialejátszó</string>
 </resources>
