--- a/android/apollo/res/values-in/strings.xml
+++ b/android/apollo/res/values-in/strings.xml
@@ -81,7 +81,7 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> disematkan ke layar beranda anda</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> tidak dapat disematkan ke layar beranda anda</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' dijadikan sebagai nada dering</string>
-    <string name="now_listening_to">#SekarangMemutar <xliff:g id="title">%1$s</xliff:g> oleh <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#SekarangMemutar <xliff:g id="title">%1$s</xliff:g> oleh <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">Bagikan lagu menggunakan:</string>
     <string name="no_effects_for_you">Ekualisir tidak dapat dibuka.</string>
   <string name="empty_music">Untuk menyalin musik dari komputer ke perangkat Anda, gunakan kabel USB.</string>
