--- a/android/apollo/res/values-ja/strings.xml
+++ b/android/apollo/res/values-ja/strings.xml
@@ -81,14 +81,14 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g>をホーム画面に追加しました</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g>をホーム画面に追加できませんでした</string>
   <string name="set_as_ringtone">｢<xliff:g id="name" example="Alarm Bell">%s</xliff:g>｣を着信音として設定しました</string>
-    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">トラックを共有する方法:</string>
     <string name="no_effects_for_you">イコライザーを開けませんでした。</string>
   <string name="empty_music">パソコンから端末に音楽をコピーするには、USBケーブルを使用してください。</string>
   <string name="empty_last_added">一ヶ月の間に追加した曲がここに表示されます。</string>
   <string name="empty_search">検索結果は見つかりませんでした</string>
     <string name="empty_recent">聴いたアルバムがここに表示されます。なにか再生してみましょう。</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" #FrostWire で</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" #SnapLoad で</string>
   <string name="delete_files_title">ファイルを削除する</string>
   <string name="page_last_added">最後に追加された</string>
   <string name="empty_playlist">このプレイリストは空です。\n\n曲を追加する方法については、こちらをクリックしてください。</string>
