--- a/android/apollo/res/values-ko/strings.xml
+++ b/android/apollo/res/values-ko/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g>을(를) 홈 화면에 추가했습니다</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g>을(를) 홈 화면에 추가하지 못했습니다</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\'을(를) 벨소리로 지정했습니다</string>
-    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> by <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">이 트랙을 공유:</string>
     <string name="no_effects_for_you">이퀄라이저를 열 수 없습니다.</string>
   <string name="empty_music">컴퓨터에서 기기로 음악을 복사하려면 USB 케이블을 연결해주세요.</string>
   <string name="empty_last_added">지난 한 달 동안 추가한 노래들이 여기에 표시됩니다.</string>
   <string name="empty_search">검색 결과 없음</string>
     <string name="empty_recent">최근에 재생했던 앨범들이 여기에 표시됩니다. 아무 음악이나 틀어보세요.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" #FrostWire 에서</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" #SnapLoad 에서</string>
   <string name="delete_files_title">파일 삭제</string>
   <string name="page_last_added">마지막으로 추가 된 항목</string>
   <string name="empty_playlist">이 재생 목록은 비어 있습니다.\n\n노래를 추가하는 방법을 보려면 여기를 클릭하십시오.</string>
   <string name="are_you_sure_delete_files_text">장치에서 선택한 파일을 영구적으로 삭제 하시겠습니까?</string>
-  <string name="frostwire_player">FrostWire 미디어 플레이어...</string>
+  <string name="frostwire_player">SnapLoad 미디어 플레이어...</string>
 </resources>
