--- a/android/apollo/res/values-lb/strings.xml
+++ b/android/apollo/res/values-lb/strings.xml
@@ -60,7 +60,7 @@
   <string name="remove_from_favorites">Fuert aus Favoritten</string>
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> op Ärer Heemechtsplaz gestréckt</string>
   <string name="empty_recent">Lidder déi Dir héieren hutt wäert et hei weisen. Probéiert eng Musek ze spillen.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" op #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" op #SnapLoad </string>
     <string name="context_menu_more_by_artist">Méi vun der Kënschtlerin</string>
   <string name="add_to_queue">Fichier mat der Warteschléif</string>
     <string name="sort_order_entry_track_list">Track Lëscht</string>
@@ -73,7 +73,7 @@
     <string name="context_menu_remove_from_recent">Entferne vun de läschten</string>
   <string name="empty_playlist">Dës Playlist ass eidel.\n\nKlickt hei fir ze léieren wéi Dir Lidder u kënnt.</string>
   <string name="empty_last_added">Lieder déi Dir am Laaf vum leschten Mount huet, ginn hei gewisen.</string>
-    <string name="now_listening_to">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" vum <xliff:g id="artist">%2$s</xliff:g> op #FrostWire</string>
+    <string name="now_listening_to">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" vum <xliff:g id="artist">%2$s</xliff:g> op #SnapLoad </string>
   <string name="sort_order_entry_artist">Kënschtler</string>
   <string name="empty_music">Nach keng Songs. Versucht e puer Inhalt ze lueden</string>
   <string name="context_menu_remove_from_playlist">Aus vun der Lëscht vun de Songs ze spillen</string>
@@ -86,7 +86,7 @@
     <string name="share_track_using">Bäisetze weg mat:</string>
     <string name="accessibility_prev">Virdrun</string>
   <string name="add_to_playlist">Zu der Lëscht vun de Lidder ze spillen</string>
-  <string name="frostwire_player">FrostWire Player</string>
+  <string name="frostwire_player">SnapLoad Player</string>
     <string name="page_songs">Lidder</string>
     <string name="sort_order_entry_number_of_songs">Zuel vu Lidder</string>
     <string name="menu_sort_by">Zortéieren no</string>
