--- a/android/apollo/res/values-lt/strings.xml
+++ b/android/apollo/res/values-lt/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen">„<xliff:g id="name">%s</xliff:g>“ prisegta į pagrindinį ekraną</string>
   <string name="could_not_be_pinned_to_home_screen">„<xliff:g id="name">%s</xliff:g>“ nepavyko prisegti į pagrindinį ekraną</string>
   <string name="set_as_ringtone">„<xliff:g id="name" example="Alarm Bell">%s</xliff:g>“ nustatytas kaip skambėjimo tonas</string>
-    <string name="now_listening_to">#Dabar grojama <xliff:g id="title">%1$s</xliff:g> pagal <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#Dabar grojama <xliff:g id="title">%1$s</xliff:g> pagal <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">Bendrinti dainą naudojant:</string>
     <string name="no_effects_for_you">Nepavyko atidaryti ekvalaizerio.</string>
   <string name="empty_music">Norėdami kopijuoti muziką iš kompiuterio į savo prietaisą, naudokite USB kabelį.</string>
   <string name="empty_last_added">Dainas, kurias pridėjote per pastarąjį mėnesį bus rodomos čia.</string>
   <string name="empty_search">Nerasta jokių paieškos rezultatų</string>
     <string name="empty_recent">Albumai kuriuos klausėtes bus rodomi čia. Pabandykite paleisti šiek tiek muzikos.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" ant #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" ant #SnapLoad </string>
   <string name="delete_files_title">Ištrinti failus</string>
   <string name="page_last_added">Paskutiniai įtraukti</string>
   <string name="empty_playlist">Šis grojaraštis tuščias.\n\nSpustelėkite čia, jei norite sužinoti, kaip pridėti dainų.</string>
   <string name="are_you_sure_delete_files_text">Ar tikrai norite visada pašalinti pasirinktus failus iš savo įrenginio?</string>
-  <string name="frostwire_player">FrostWire Medijos Leistuvas</string>
+  <string name="frostwire_player">SnapLoad Medijos Leistuvas</string>
 </resources>
