--- a/android/apollo/res/values-ro/strings.xml
+++ b/android/apollo/res/values-ro/strings.xml
@@ -81,17 +81,17 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> fixată în ecranul dvs acasă</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> nu s-a putut fixa în ecranul dvs acasă</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' setare ca ton de apel</string>
-    <string name="now_listening_to">#AcumAsculți <xliff:g id="title">%1$s</xliff:g> de <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#AcumAsculți <xliff:g id="title">%1$s</xliff:g> de <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">Distribuie melodia folosind:</string>
     <string name="no_effects_for_you">Egalizatorul nu a putut fi deschis.</string>
   <string name="empty_music">Pentru a copia muzică de pe computer în dispozitivul dvs, folosiți un cablu USB.</string>
   <string name="empty_last_added">Melodiile adăugare de dvs în ultima lună vor fi afișate aici.</string>
   <string name="empty_search">Nu am găsit rezultate la căutare</string>
     <string name="empty_recent">Albumele ascultate de dvs vor fi afișate aici. Încearcă să asculți ceva muzică.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" pe #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" pe #SnapLoad </string>
   <string name="delete_files_title">Sterge fisierele</string>
   <string name="page_last_added">Ultimele adăugate</string>
   <string name="empty_playlist">Acest playlist este gol.\n\nFaceți clic aici pentru a afla cum să adăugați melodii.</string>
   <string name="are_you_sure_delete_files_text">Sigur doriți să DELETEȚI PERMANENT fișierele selectate de pe dispozitiv?</string>
-  <string name="frostwire_player">FrostWire Player</string>
+  <string name="frostwire_player">SnapLoad Player</string>
 </resources>
