--- a/android/apollo/res/values-sr/strings.xml
+++ b/android/apollo/res/values-sr/strings.xml
@@ -81,14 +81,14 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> додато на твој почетни екран</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g> није могуће додати на твој почетни екран</string>
   <string name="set_as_ringtone">\'<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\' постављено као тон звона</string>
-    <string name="now_listening_to">#Тренутно се слуша <xliff:g id="title">%1$s</xliff:g> од <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#Тренутно се слуша <xliff:g id="title">%1$s</xliff:g> од <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">Дели песму путем:</string>
     <string name="no_effects_for_you">Еквилајзер не може бити отворен.</string>
   <string name="empty_music">Да копираш музику са рачунара на твој уређај, користи USB кабал.</string>
   <string name="empty_last_added">Песме које си додао током претходног месеца ће бити приказане овде.</string>
   <string name="empty_search">Нема пронађених резултата</string>
     <string name="empty_recent">Албуми које си слушао ће бити приказани овде. Пробај да пустиш неку музику.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" на #FrostWire</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" на #SnapLoad </string>
   <string name="delete_files_title">Брисање датотека</string>
   <string name="page_last_added">Последње додато</string>
   <string name="empty_playlist">Ова листа песама је празна.\n\nКликните овде да бисте сазнали како додати песме.</string>
