--- a/android/apollo/res/values-zh-rCN/strings.xml
+++ b/android/apollo/res/values-zh-rCN/strings.xml
@@ -81,14 +81,14 @@
   <string name="pinned_to_home_screen"><xliff:g id="name">%s</xliff:g>已固定到主屏幕</string>
   <string name="could_not_be_pinned_to_home_screen"><xliff:g id="name">%s</xliff:g>不能被固定到主屏幕</string>
   <string name="set_as_ringtone">\"<xliff:g id="name" example="警钟">%s</xliff:g>\" 设置为铃声</string>
-    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> - <xliff:g id="artist">%2$s</xliff:g> #FrostWire</string>
+    <string name="now_listening_to">#NowPlaying <xliff:g id="title">%1$s</xliff:g> - <xliff:g id="artist">%2$s</xliff:g> #SnapLoad </string>
   <string name="share_track_using">曲目分享方式:</string>
     <string name="no_effects_for_you">无法打开均衡器.</string>
   <string name="empty_music">请使用 USB 数据线把音乐从您的计算机复制到您的设备中.</string>
   <string name="empty_last_added">您在这一个月以来添加的歌曲将在这里显示.</string>
   <string name="empty_search">无搜索结果</string>
     <string name="empty_recent">您曾经听过的专辑将在这里显示. 请尝试播放一些音乐.</string>
-  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" 在#FrostWire上</string>
+  <string name="now_listening_to_no_artist_available">#NowPlaying \"<xliff:g id="title">%1$s</xliff:g>\" 在#SnapLoad 上</string>
   <string name="delete_files_title">删除文件</string>
   <string name="page_last_added">最后添加</string>
   <string name="empty_playlist">此播放列表为空。\n\n单击此处了解如何添加歌曲。</string>
